Fixed button spacing and grid and charge station heading text.

--- a/src/Components/data-collection-page/DataCollectionPage.scss
+++ b/src/Components/data-collection-page/DataCollectionPage.scss
@@ -5,5 +5,5 @@
     overflow-y: auto;
     text-align: center;
     box-sizing: border-box;
-    margin: 1rem 0.3rem;
+    margin: 1rem;
 }
